<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CombatActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteOpacity"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textCombat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:paddingTop="25dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/textPres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/textRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/separateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textJoueur1CA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonAttBase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0" />

                    <Button
                        android:id="@+id/buttonPVJ1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <Button
                        android:id="@+id/buttonAttSpe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />
                </TableRow>

                <TextView
                    android:id="@+id/textInfoJ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/separateur2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textJoueur2CA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonAttBaseJ2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0" />

                    <Button
                        android:id="@+id/buttonPVJ2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <Button
                        android:id="@+id/buttonAttSpeJ2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2" />
                </TableRow>

                <TextView
                    android:id="@+id/textInfoJ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/separateur3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000" />


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:id="@+id/textVieJ1"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:id="@+id/textVieJ2"
                        android:textColor="@color/black"/>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <ProgressBar
                        android:id="@+id/determinatebarJ1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <ProgressBar
                        android:id="@+id/determinatebarJ2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_weight="1"/>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">


                    <ImageSwitcher
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/imageJoueur1"
                        android:paddingLeft="15dp"/>
                    <ImageSwitcher
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/imageJoueur2"
                        android:paddingRight="15dp"/>

                </TableRow>

                <Button
                    android:id="@+id/buttonFinRound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <ImageSwitcher
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/imgSwitchFirework"/>
                <Button
                    android:id="@+id/buttonReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>