...
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:textSize="13sp"
                        android:paddingStart="40dp"/>

                    <EditText
                        android:id="@+id/editNomPerso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1" />

                </TableRow>
...
                        android:layout_weight="1"
                        android:paddingStart="45dp"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editNivJ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1" />

                </TableRow>
...
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:paddingStart="45dp"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editForceJ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1" />

                </TableRow>
...
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:paddingStart="40dp"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editAgiJ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1" />

                </TableRow>
...
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:paddingStart="30dp"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editIntJ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1" />

                </TableRow>


                <Button
                    android:id="@+id/buttonCreateJ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textResCreaJ1"
...
                    <Button
                        android:id="@+id/buttonCombat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/buttonRAZ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </TableRow>
            </LinearLayout>
...
